--- a/index.html
+++ b/index.html
@@ -2,57 +2,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skylink Solutions</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Skylink Solutions</title>
 </head>
 <body>
-    <header>
-        <div class="logo">SKYLINK SOLUTIONS</div>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Shop</a>
-            <a href="#">Services</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-            <a href="#">Login</a>
-            <a href="#">Register</a>
-        </nav>
-    </header>
-    <section class="hero">
-        <h1>Welcome to<br>Skylink Solutions</h1>
-        <p>Get ₹200 OFF on your first order!</p>
-        <a href="https://wa.me/919900405101" class="whatsapp-button">Chat with Us</a>
-    </section>
-    <section class="info">
-        <p>Drones starting from ₹3,999 to ₹3 Lakh+</p>
-        <p>Warranty Provided</p>
-        <p>Made in India</p>
-    </section>
-    <section class="products">
-        <h2>Featured Products</h2>
-        <div class="product">
-            <img src="mavic.jpg" alt="Mavic Air 2">
-            <h3>Mavic Air 2</h3>
-            <p>₹55,000</p>
-            <a href="https://wa.me/919900405101" class="buy">Buy on WhatsApp</a>
-        </div>
-        <div class="product">
-            <img src="phantom.jpg" alt="Phantom 4 Pro">
-            <h3>Phantom 4 Pro</h3>
-            <p>₹1,50,000</p>
-            <a href="https://wa.me/919900405101" class="buy">Buy on WhatsApp</a>
-        </div>
-        <div class="product">
-            <img src="mini.jpg" alt="Mini 2">
-            <h3>Mini 2</h3>
-            <p>₹45,000</p>
-            <a href="https://wa.me/919900405101" class="buy">Buy on WhatsApp</a>
-        </div>
-    </section>
-    <footer>
-        <p>Trusted by 1M+ Customers | GUARANTEE | TRUSTED</p>
-    </footer>
+  <header>
+    <h1>Skylink Solutions</h1>
+    <p>Your Sky, Our Limits</p>
+  </header>
+  <main>
+    <h2>Beginner Drone - ₹3,999</h2>
+    <p>Includes 1-year warranty, dual cameras, FPV mode, and VR compatibility.</p>
+    <a href="https://wa.me/919900405101?text=I'm%20interested%20in%20buying%20the%20Beginner%20Drone%20from%20Skylink%20Solutions.">Buy Now on WhatsApp</a>
+  </main>
 </body>
 </html>
