--- a/index.html
+++ b/index.html
@@ -1,45 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Skylink Solutions - Your Sky, Our Limits</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f4; color: #333; }
-    header { background: #0c0c0c; color: #fff; padding: 20px; text-align: center; }
-    nav { background: #222; padding: 10px; text-align: center; }
-    nav a { color: #fff; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    section { padding: 20px; }
-    .cta { display: block; background: #28a745; color: #fff; padding: 15px; margin: 20px auto; text-align: center; width: max-content; border-radius: 5px; text-decoration: none; }
-    .product { border: 1px solid #ccc; background: #fff; padding: 20px; margin-bottom: 20px; border-radius: 10px; max-width: 500px; margin: 20px auto; }
-    footer { background: #111; color: #ccc; text-align: center; padding: 20px; }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Skylink Solutions</h1>
-    <p>Your Sky, Our Limits</p>
-  </header>
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Shop</a>
-    <a href="#">Contact</a>
-    <a href="#">Register</a>
-    <a href="#">Login</a>
-  </nav>
-  <section>
-    <h2>Beginner Drone - ₹3,999</h2>
-    <div class="product">
-      <img src="drone.jpg" alt="Beginner Drone" width="100%" style="border-radius: 10px;">
-      <p>Includes 1-year warranty, dual cameras, FPV mode, VR compatibility</p>
-      <a class="cta" href="https://wa.me/919900405101?text=I'm%20interested%20in%20buying%20the%20Beginner%20Drone%20from%20Skylink%20Solutions">Buy on WhatsApp</a>
-    </div>
-    <p style="text-align: center;">Free delivery across Bangalore</p>
-    <p style="text-align: center; font-weight: bold;">Taking India to Skies</p>
-  </section>
-  <footer>
-    <p>© 2025 Skylink Solutions. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Skylink Solutions</title></head><body>Welcome to Skylink Solutions</body></html>
