--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<!DOCTYPE html><html><head><title>Skylink Solutions</title></head><body>Welcome to Skylink Solutions</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Skylink Solutions</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <header>
+        <h1>Skylink Solutions</h1>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Shop</a>
+            <a href="#">Login</a>
+            <a href="#">Register</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <h2>Your Sky, Our Limits</h2>
+            <p>Beginner drone - ₹3,999 | 1-Year Warranty</p>
+            <a class="cta-button" href="https://wa.me/919900405101?text=I%20want%20to%20buy%20the%20beginner%20drone%20for%20₹3,999">Buy on WhatsApp</a>
+        </section>
+        <section class="ambassador">
+            <h3>Brand Ambassador</h3>
+            <img src="ambassador.jpg" alt="Ambassador" />
+        </section>
+    </main>
+    <footer>
+        <p>Taking India to Skies</p>
+        <p>Contact: +91 9900405101</p>
+    </footer>
+</body>
+</html>
